<resources>
    <string name="app_name">Contactos</string>
    <string name="NombreCompleto">Nombre Completo</string>
    <string name="Telefono">Telefono</string>
    <string name="Email">EMail</string>
    <string name="Descripcion">Descripcion Contacto</string>
    <string name="Siguiente">Siguiente</string>
    <string name="BCancelar">Cancelar</string>
    <string name="BOk">Ok</string>
    <string name="BeditarDatos">Editar Datos</string>
    <string name="TvEstablecerFecha">Establezca la </string>
    <string name="TvFechaDeNacimiento">Fecha de Nacimiento</string>
    <string name="Confirmacion">Confirmar Datos</string>
</resources>