<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="@dimen/DTextsView"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/NombreCompleto"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="@dimen/DTextsView"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="@dimen/DTextsView"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Telefono"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/etEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Descripcion"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etDescripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etDescripcion"
        android:layout_width="@dimen/DTextsView"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/bSiguiente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bSiguiente"
        android:layout_width="@dimen/Boton"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:onClick="Siguiente"
        android:text="@string/Siguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="@dimen/DLCardView"
        android:layout_height="@dimen/DACardView"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" >

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="301dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="@dimen/DLCardView"
        android:layout_height="@dimen/DLcv2"
        app:layout_constraintBottom_toTopOf="@+id/cardView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/TvEstablecerFecha" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="@dimen/DAcv2"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginLeft="160dp"
            android:text="@string/TvFechaDeNacimiento" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="@dimen/DAcv2"
        android:layout_height="@dimen/DLcv2"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/etTelefono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/bCancelar"
            android:layout_width="@dimen/DAcv2"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:onClick="Cancelar"
            android:text="@string/BCancelar" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/DAcv2"
        android:layout_height="@dimen/DLcv2"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/etTelefono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.789"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/bOk"
            android:layout_width="@dimen/DAcv2"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:onClick="Ok"
            android:text="@string/BOk" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>